plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '7.0.2'
}

group = 'kr.kro.deom'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}
bootJar {
	archiveFileName = 'deom.jar'
}

bootRun {
	systemProperty 'spring.profiles.active', System.getProperty('spring.profiles.active', 'dev')
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'me.paulschwarz:spring-dotenv:3.0.0'
	implementation 'org.apache.commons:commons-lang3:3.14.0'
	implementation 'com.google.guava:guava:33.0.0-jre'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:postgresql:1.19.7'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	//swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'

	// aws s3
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
}

spotless {
	java {
		encoding('UTF-8')
		importOrder(
				'java',
				'javax',
				'jakarta',
				'org.springframework',
				'org.hibernate',
				'lombok',
				'',
				'kr.kro.deom',
				'org.junit',
				'org.mockito',
				'\\#'
		)
		removeUnusedImports()
		googleJavaFormat().aosp()
		trimTrailingWhitespace()
		endWithNewline()

		targetExclude('**/generated/**')
	}

	format 'misc', {
		target '**/*.yml', '**/*.yaml'
		trimTrailingWhitespace()
		endWithNewline()
		indentWithSpaces(2)
	}

	json {
		target '**/*.json'
		prettier()
	}
}


tasks.named('test') {
	useJUnitPlatform()
}


tasks.named('compileJava') {
	dependsOn 'spotlessApply'
}